2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* compress.c (inflate_file): Removed code handling
	negative return value from pb_read, since it is always
	non-negative.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* pushback.h (pb_read): Added documentation.
	* pushback.c: Added myself to authors.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* pushback.c (pb_read): Exit if read fails.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Exit if lseek fails.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Changed amt and tc to size_t.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar): Changed rdamt to size_t.
	(expand_options) Changed new_argc, args_to_expand to size_t.
	Added corresponding cast.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (add_array_to_jar): Exit if write fails.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (get_next_arg): Changed len and pos to size_t.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (SPLINT_FLAGS): Include headers in lib directory.
	* Makefile.in: Regenerated.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jargrep.c (main): Use strdup instead of strcpy.
	* jartool.c (make_manifest, add_to_jar, add_file_to_jar,
	add_array_to_jar): Use strdup and strncpy instead of strcpy.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* lib/Makefile.am, lib/strdup.c, lib/string_.h
	m4/gnulib-cache.m4, m4/gnulib-comp.m4, m4/strdup.m4
	m4/string_h.m4: Imported strdup module from gnulib.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (jt_strdup): Removed.
	(get_next_arg, expand_options) Use strdup.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	*  lib/dummy.c, lib/strcasecmp.c, lib/string_.h, lib/strncasecmp.c,
	m4/strcase.m4, m4/string_h.m4: Removed.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.in, aclocal.m4, config.h.in, configure,