@@ -1,5 +1,10 @@
 2007-02-18  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.c (consume): Changed to return void.
+	Removed unused return statement.
+
+2007-02-18  Dalibor Topic  <robilad@kaffe.org>
+
 	* compress.c (inflate_file): Removed code handling
 	negative return value from pb_read, since it is always
 	non-negative.
